--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -16,7 +16,7 @@ SRCS		:= main.cpp	\
 		ScavTrap.cpp	\
 		FragTrap.cpp	\
 
-OBJS		:= $(SRCS:$(SRCDIR)/%.cpp=$(OBJDIR)/%.o)
+OBJS		:= $(SRCS:%.cpp=$(OBJDIR)/%.o)
 
 # ==== Colors ====
 RESET		:= \033[0m
@@ -38,7 +38,7 @@ $(NAME): $(OBJS)
 	@echo -e "$(BOLD)$(GREEN)[✓] Build successful!$(RESET)"
 
 # Object files
-$(OBJDIR)/%.o: $(SRCDIR)/%.cpp | $(OBJDIR)
+$(OBJDIR)/%.o: %.cpp | $(OBJDIR)
 	@echo -e "$(BOLD)$(YELLOW)[Compiling]$(RESET) $<"
 	@$(CXX) $(CXXFLAGS) -I$(INCDIR) -c $< -o $@
 
