--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -17,7 +17,7 @@ SRCS		:= main.cpp	\
 		FragTrap.cpp	\
 		DiamondTrap.cpp
 
-OBJS		:= $(SRCS:$(SRCDIR)/%.cpp=$(OBJDIR)/%.o)
+OBJS		:= $(SRCS:%.cpp=$(OBJDIR)/%.o)
 
 # ==== Colors ====
 RESET		:= \033[0m
@@ -39,7 +39,7 @@ $(NAME): $(OBJS)
 	@echo -e "$(BOLD)$(GREEN)[✓] Build successful!$(RESET)"
 
 # Object files
-$(OBJDIR)/%.o: $(SRCDIR)/%.cpp | $(OBJDIR)
+$(OBJDIR)/%.o: %.cpp | $(OBJDIR)
 	@echo -e "$(BOLD)$(YELLOW)[Compiling]$(RESET) $<"
 	@$(CXX) $(CXXFLAGS) -I$(INCDIR) -c $< -o $@
 
