--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -14,7 +14,7 @@ INCDIR		:= include
 SRCS		:= main.cpp	\
 		ClapTrap.cpp	\
 
-OBJS		:= $(SRCS:$(SRCDIR)/%.cpp=$(OBJDIR)/%.o)
+OBJS		:= $(SRCS:%.cpp=$(OBJDIR)/%.o)
 
 # ==== Colors ====
 RESET		:= \033[0m
@@ -36,7 +36,7 @@ $(NAME): $(OBJS)
 	@echo -e "$(BOLD)$(GREEN)[✓] Build successful!$(RESET)"
 
 # Object files
-$(OBJDIR)/%.o: $(SRCDIR)/%.cpp | $(OBJDIR)
+$(OBJDIR)/%.o: %.cpp | $(OBJDIR)
 	@echo -e "$(BOLD)$(YELLOW)[Compiling]$(RESET) $<"
 	@$(CXX) $(CXXFLAGS) -I$(INCDIR) -c $< -o $@
 
